--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple@3.0.0/dist/siimple.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/main.css" />
-    <script src="main.js"></script>
+
 </head>
 
 <body>
@@ -17,8 +17,8 @@
         <div class="siimple-grid-row">
             <div class="siimple-grid-col siimple-grid-col-sm--10">
                     <div class="siimple-jumbotron" align="center">
-                            <div class="siimple-jumbotron-title">LET'S PLAY HANGMAN!</div>
-                            <div class="siimple-jumbotron-subtitle">THEME: DINOSAUR HUNTER</div>
+                            <div class="siimple-jumbotron-title">HANGMAN</div>
+                            <div class="siimple-jumbotron-subtitle">DINOSAUR HUNTER</div>
                             <div class="siimple-jumbotron-detail"></div>
                           </div>
 
@@ -34,40 +34,34 @@
                     <div class="siimple-grid-col siimple-grid-col--6">
                         <div class="siimple-box siimple-box--green">
                             <div class="siimple-box-title" align="center">WINS</div>
-                            <div class="siimple-box-subtitle" align="center">0</div>
+                            <div class="wins siimple-box-subtitle" align="center"></div>
                         </div>
                     </div>
                     <div class="siimple-grid-col siimple-grid-col--6">
                         <div class="siimple-box siimple-box--green">
                             <div class="siimple-box-title" align="center">GUESSES REMAINING</div>
-                            <div class="siimple-box-subtitle" align="center">10</div>
+                            <div class="guess siimple-box-subtitle" align="center"></div>
                         </div>
                     </div>
                 </div>
                 <!-- WILL NEED TO USE JS TO TAKE RANDOMLY SELECTED WORD FROM ARRAY, AND GENERATE string.length NUMBER OF DIV BOXES FOR EACH LETTER. THEN FILL THEM WITH INDIVIDIUAL LETTERS (DISPLAY: NONE) THEN WHEN A CORRECT LETTER IS GUESSED (indexOf(guess) !== "-1") FILL IN THAT DIV BOX WITH CORRECT GUESS. (TOGGLE CLASS "UNHIDE")  -->
                 <div class="siimple-grid-row">
                     <div class="word-container siimple-grid-col">
-                        <div class="letter siimple-box--small">R</div>
-                        <div class="letter siimple-box--small">A</div>
-                        <div class="letter siimple-box--small">P</div>
-                        <div class="letter siimple-box--small">T</div>
-                        <div class="letter siimple-box--small">O</div>
-                        <div class="letter siimple-box--small">R</div>
-
                     </div>
                 </div>
 
                 <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col-lg-4">
-                        <div class="siimple-btn siimple-btn--navy">PLAY AGAIN</div>
+                    <div class="siimple-grid-col siimple-grid-col-lg-4">                        
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+                        <!-- <div class="siimple-btn siimple-btn--navy">PLAY AGAIN</div> -->
 
-
+    <script src="main.js"></script>
 </body>
 
 </html>
