slowly adding features, building up letter guess tracker using array

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                           </div>
 
                 <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col-sm--4 siimple-grid-col-lg--4 siimple-grid-col-xl--2">
+                    <div class="siimple-grid-col siimple-grid-col-sm--4 siimple-grid-col-lg--4 siimple-grid-col-xl--2" align="center">
                         <div class="siimple-box siimple-box--teal" align="center">
-                            <div class="siimple-box-detail">PRESS ANY KEY TO START!</div>
+                            <div class="new-game siimple-box-detail">CLICK HERE FOR A NEW GAME!</div>
                         </div>
                     </div>
                 </div>
