more game logic added including updated guesses accoring to correct/incorrect

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="siimple-grid-col siimple-grid-col--6">
                         <div class="siimple-box siimple-box--green">
                             <div class="siimple-box-title" align="center">GUESSES REMAINING</div>
-                            <div class="guess siimple-box-subtitle" align="center"></div>
+                            <div class="guesses siimple-box-subtitle" align="center"></div>
                         </div>
                     </div>
                 </div>
