--- a/index.html
+++ b/index.html
@@ -46,9 +46,20 @@
                 </div>
                 <!-- WILL NEED TO USE JS TO TAKE RANDOMLY SELECTED WORD FROM ARRAY, AND GENERATE string.length NUMBER OF DIV BOXES FOR EACH LETTER. THEN FILL THEM WITH INDIVIDIUAL LETTERS (DISPLAY: NONE) THEN WHEN A CORRECT LETTER IS GUESSED (indexOf(guess) !== "-1") FILL IN THAT DIV BOX WITH CORRECT GUESS. (TOGGLE CLASS "UNHIDE")  -->
                 <div class="siimple-grid-row">
-                    <div class="word-container siimple-grid-col">
+                    <div class="siimple-grid-col-sm--12" align="center"><h1>CURRENT WORD:</h1></div>
+                    <div class="word-container siimple-grid-col-sm--12">
+
                     </div>
+
                 </div>
+
+                <div class="siimple-grid-row">
+                        <div class="siimple-grid-col-sm--12" align="center"><h1>LETTERS GUESSED:</h1></div>
+                        <div class="letters-guessed-container siimple-grid-col-sm--12">
+
+                        </div>
+    
+                    </div>
 
                 <div class="siimple-grid-row">
                     <div class="siimple-grid-col siimple-grid-col-lg-4">                        
