button styles added

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
 
                 <div class="siimple-grid-row">
                     <div class="siimple-grid-col siimple-grid-col-sm--4 siimple-grid-col-lg--4 siimple-grid-col-xl--2" align="center">
-                        <div class="siimple-box siimple-box--teal" align="center">
-                            <div class="new-game siimple-box-detail">CLICK HERE FOR A NEW GAME!</div>
-                        </div>
+                        <div class="new-game siimple-btn siimple-btn--pink"><h3>RETRY</h3></div>
                     </div>
                 </div>
 
@@ -70,7 +68,7 @@
         </div>
     </div>
 
-                        <!-- <div class="siimple-btn siimple-btn--navy">PLAY AGAIN</div> -->
+                        <!--  -->
 
     <script src="main.js"></script>
 </body>
