functioning game with a few kinks + in need of MAJOR refactoring

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                 <div class="siimple-grid-row">
                     <div class="siimple-grid-col siimple-grid-col-sm--4 siimple-grid-col-lg--4 siimple-grid-col-xl--2" align="center">
-                        <div class="new-game siimple-btn siimple-btn--pink"><h3>RETRY</h3></div>
+                        <div class="new-game siimple-btn siimple-btn--pink"><h3>RESTART</h3></div>
                     </div>
                 </div>
 
@@ -42,7 +42,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- WILL NEED TO USE JS TO TAKE RANDOMLY SELECTED WORD FROM ARRAY, AND GENERATE string.length NUMBER OF DIV BOXES FOR EACH LETTER. THEN FILL THEM WITH INDIVIDIUAL LETTERS (DISPLAY: NONE) THEN WHEN A CORRECT LETTER IS GUESSED (indexOf(guess) !== "-1") FILL IN THAT DIV BOX WITH CORRECT GUESS. (TOGGLE CLASS "UNHIDE")  -->
                 <div class="siimple-grid-row">
                     <div class="siimple-grid-col-sm--12" align="center"><h1>CURRENT WORD:</h1></div>
                     <div class="word-container siimple-grid-col-sm--12">
@@ -54,7 +53,7 @@
                 <div class="siimple-grid-row">
                         <div class="siimple-grid-col-sm--12" align="center"><h1>LETTERS GUESSED:</h1></div>
                         <div class="letters-guessed-container siimple-grid-col-sm--12">
-
+                            <!-- //WITHIN HERE -->
                         </div>
     
                     </div>
