creating alternate script file for more editing

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
     <div class="siimple-grid">
         <div class="siimple-grid-row">
             <div class="siimple-grid-col siimple-grid-col-sm--10">
-                    <div class="siimple-jumbotron" align="center">
-                            <div class="siimple-jumbotron-title">HANGMAN</div>
-                            <div class="siimple-jumbotron-subtitle">DINOSAUR HUNTER</div>
-                            <div class="siimple-jumbotron-detail"></div>
-                          </div>
+                <div class="siimple-jumbotron" align="center">
+                    <div class="siimple-jumbotron-title">HANGMAN</div>
+                    <div class="siimple-jumbotron-subtitle">DINOSAUR HUNTER</div>
+                    <div class="siimple-jumbotron-detail"></div>
+                </div>
 
                 <div class="siimple-grid-row">
                     <div class="siimple-grid-col siimple-grid-col-sm--4 siimple-grid-col-lg--4 siimple-grid-col-xl--2" align="center">
-                        <div class="new-game siimple-btn siimple-btn--pink"><h3>RESTART</h3></div>
+                        <div class="new-game siimple-btn siimple-btn--pink">
+                            <h3>RESTART</h3>
+                        </div>
                     </div>
                 </div>
 
@@ -43,7 +45,9 @@
                     </div>
                 </div>
                 <div class="siimple-grid-row">
-                    <div class="siimple-grid-col-sm--12" align="center"><h1>CURRENT WORD:</h1></div>
+                    <div class="siimple-grid-col-sm--12" align="center">
+                        <h1>CURRENT WORD:</h1>
+                    </div>
                     <div class="word-container siimple-grid-col-sm--12">
 
                     </div>
@@ -51,15 +55,17 @@
                 </div>
 
                 <div class="siimple-grid-row">
-                        <div class="siimple-grid-col-sm--12" align="center"><h1>LETTERS GUESSED:</h1></div>
-                        <div class="letters-guessed-container siimple-grid-col-sm--12">
-                            <!-- //WITHIN HERE -->
-                        </div>
-    
+                    <div class="siimple-grid-col-sm--12" align="center">
+                        <h1>LETTERS GUESSED:</h1>
+                    </div>
+                    <div class="letters-guessed-container siimple-grid-col-sm--12">
+                        <!-- //WITHIN HERE -->
                     </div>
 
+                </div>
+
                 <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col-lg-4">                        
+                    <div class="siimple-grid-col siimple-grid-col-lg-4">
 
                     </div>
                 </div>
@@ -67,9 +73,7 @@
         </div>
     </div>
 
-                        <!--  -->
-
-    <script src="main.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
