everything is working!

--- a/index.html
+++ b/index.html
@@ -23,10 +23,16 @@
                 </div>
 
                 <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col-sm--4 siimple-grid-col-lg--4 siimple-grid-col-xl--2" align="center">
+                    <div class="siimple-grid-col siimple-grid-col top-features">
+
                         <div class="new-game siimple-btn siimple-btn--pink">
                             <h3>RESTART</h3>
                         </div>
+
+                        <div class="siimple-box siimple-box--navy instructions">
+                            <h5>TIP: <br> (HIT ENTER TO SUBMIT YOUR FINAL ANSWER!)</h5>
+                        </div>
+
                     </div>
                 </div>
 
