styles fixed and additional alerts added

--- a/index.html
+++ b/index.html
@@ -15,69 +15,76 @@
 <body>
     <div class="siimple-grid">
         <div class="siimple-grid-row">
-            <div class="siimple-grid-col siimple-grid-col-sm--10">
-                <div class="siimple-jumbotron" align="center">
-                    <div class="siimple-jumbotron-title">HANGMAN</div>
+            <div class="siimple-grid-col--12" align="center">
+                <div class="siimple-jumbotron">
+                    <div class="siimple-jumbotron-title" >HANGMAN</div>
                     <div class="siimple-jumbotron-subtitle">DINOSAUR HUNTER</div>
                     <div class="siimple-jumbotron-detail"></div>
                 </div>
+            </div>
+        </div>
+        <div class="siimple-grid-row">
 
-                <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col top-features">
-
-                        <div class="new-game siimple-btn siimple-btn--pink">
-                            <h3>RESTART</h3>
-                        </div>
-
-                        <div class="siimple-box siimple-box--navy instructions">
-                            <h5>TIP: <br> (HIT ENTER TO SUBMIT YOUR FINAL ANSWER!)</h5>
-                        </div>
-
-                    </div>
+            <div class="siimple-grid-col siimple-grid-col--3">
+                <div class="siimple-btn siimple-btn--pink">
+                    <h3>RESTART</h3>
                 </div>
+            </div>
 
-                <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col--6">
-                        <div class="siimple-box siimple-box--green">
-                            <div class="siimple-box-title" align="center">WINS</div>
-                            <div class="wins siimple-box-subtitle" align="center"></div>
-                        </div>
-                    </div>
-                    <div class="siimple-grid-col siimple-grid-col--6">
-                        <div class="siimple-box siimple-box--green">
-                            <div class="siimple-box-title" align="center">GUESSES REMAINING</div>
-                            <div class="guesses siimple-box-subtitle" align="center"></div>
-                        </div>
-                    </div>
+            <div class="siimple-grid-col siimple-grid-col--6">
+                <span class="invisible">JUST HERE TO TAKE UP SPACE BECAUSE SIIMPLE IS CONFUSING</span>
+            </div>
+
+            <div class="siimple-grid-col siimple-grid-col--3">
+                <div class="siimple-tip siimple-tip--navy siimple-tip--exclamation">
+                    PRESS ENTER TO SUBMIT DINOSAUR FOR A WIN
                 </div>
-                <div class="siimple-grid-row">
-                    <div class="siimple-grid-col-sm--12" align="center">
-                        <h1>CURRENT WORD:</h1>
-                    </div>
-                    <div class="word-container siimple-grid-col-sm--12">
+            </div>
 
-                    </div>
+        </div>
 
+        <div class="siimple-grid-row">
+            <div class="siimple-grid-col siimple-grid-col--6">
+                <div class="siimple-box siimple-box--green">
+                    <div class="siimple-box-title" align="center">WINS</div>
+                    <div class="wins siimple-box-subtitle" align="center"></div>
                 </div>
-
-                <div class="siimple-grid-row">
-                    <div class="siimple-grid-col-sm--12" align="center">
-                        <h1>LETTERS GUESSED:</h1>
-                    </div>
-                    <div class="letters-guessed-container siimple-grid-col-sm--12">
-                        <!-- //WITHIN HERE -->
-                    </div>
-
-                </div>
-
-                <div class="siimple-grid-row">
-                    <div class="siimple-grid-col siimple-grid-col-lg-4">
-
-                    </div>
+            </div>
+            <div class="siimple-grid-col siimple-grid-col--6">
+                <div class="siimple-box siimple-box--green">
+                    <div class="siimple-box-title" align="center">GUESSES REMAINING</div>
+                    <div class="guesses siimple-box-subtitle" align="center"></div>
                 </div>
             </div>
         </div>
+        <div class="siimple-grid-row">
+            <div class="siimple-grid-col-sm--12" align="center">
+                <h1>CURRENT WORD:</h1>
+            </div>
+            <div class="word-container siimple-grid-col-sm--12">
+
+            </div>
+
+        </div>
+
+        <div class="siimple-grid-row">
+            <div class="siimple-grid-col-sm--12" align="center">
+                <h1>LETTERS GUESSED:</h1>
+            </div>
+            <div class="letters-guessed-container siimple-grid-col-sm--12">
+                <!-- //WITHIN HERE -->
+            </div>
+
+        </div>
+
+        <div class="siimple-grid-row">
+            <div class="siimple-grid-col siimple-grid-col-lg-4">
+
+            </div>
+        </div>
+
     </div>
+
 
     <script src="./script.js"></script>
 </body>
