--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
 
-    <script src="./script.js"></script>
+    <script src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
