--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HANGMAN: Dino Hunter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple@3.0.0/dist/siimple.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/main.css" />
 
