updated letter guess alerts for INCORRECT as well as PREVIOUSLY CORRECT

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="siimple-grid-row">
             <div class="siimple-grid-col-sm--12" align="center">
-                <h1>LETTERS GUESSED:</h1>
+                <h1>INCORRECT GUESSES:</h1>
             </div>
             <div class="letters-guessed-container siimple-grid-col-sm--12">
                 <!-- //WITHIN HERE -->
