included custom alerts and audio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple@3.0.0/dist/siimple.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/node_modules/custom-alert/dist/css/custom-alert-bootstrap.css"> 
+    <script src="./assets/node_modules/custom-alert/dist/js/custom-alert.min.js"></script>
+
 
 </head>
 
@@ -86,6 +89,14 @@
 
     </div>
 
+    <audio id="dinosaur-growl">
+        <source src="./assets/audio/dinosaur-growl.wav" type="audio/wav">
+    </audio>
+
+    
+    <audio id="level-up">
+        <source src="./assets/audio/levelup-short-by-datajunk.wav" type="audio/wav">
+    </audio>
 
     <script src="./assets/javascript/game.js"></script>
 </body>
